--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <p>A package to validate maps of data extracted from HTML forms in the client and server sides and a customizable jQuery plugin to validate forms as you type with ease.</p>
       <p>See <a href="./doc/js">JavaScript API</a> and <a href="./doc/sass">SASS configuration</a>.</p>
-      <img src="/site/in-action.gif" alt="Vulcan Validator in action">
+      <img src="./site/in-action.gif" alt="Vulcan Validator in action">
 
       <a name="features"></a>
       <h3>Features</h3>
